--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,33 @@
 spring.application.name=seattle-in-your-lens
-
-# PostgreSQL connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/seattle_in_your_lens
+#
+### PostgreSQL connection
+##spring.datasource.url=${DATABASE_URL}
+##spring.datasource.driver-class-name=org.postgresql.Driver
+##
+##
+### Hibernate (JPA) settings
+##spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.show-sql=true
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
+##spring.datasource.url=${DATABASE_URL}
+##spring.datasource.username=${DATABASE_USER}
+###spring.datasource.password=${DATABASE_PASSWORD}
+#
+#
+spring.datasource.url=jdbc:postgresql://localhost:5432/seattle_lens_db
 spring.datasource.username=postgres
-spring.datasource.password=y
-
-# Hibernate (JPA) settings
+#
+#
+##spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+##spring.datasource.username=postgres
+##spring.datasource.password=frsLClzVOhZkPYgUwbODMrxeAeuJcyLv
+#
+##spring.datasource.url=jdbc:postgresql://${{Postgres.PGHOST}}:${{Postgres.PGPORT}}/${{Postgres.PGDATABASE}}
+#
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
