--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
+DATABASE_URL=postgresql://postgres:objZQMbEDZvnkAmCWxeAWiMpHfKPKEBr@postgres.railway.internal:5432/railway
 
 
 
-DATABASE_URL=postgresql://postgres:frsLClzVOhZkPYgUwbODMrxeAeuJcyLv@postgres.railway.internal:5432/railway
+
+
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=objZQMbEDZvnkAmCWxeAWiMpHfKPKEBr
