--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,23 @@
 spring.application.name=seattle-in-your-lens
+# localhost
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/seattle_lens_db
-spring.datasource.username=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/seattle_lens_db
+#spring.datasource.username=postgres
+#
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+# deployed
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+server.port=${PORT:8080}
 
