--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-DATABASE_URL=postgresql://postgres:objZQMbEDZvnkAmCWxeAWiMpHfKPKEBr@postgres.railway.internal:5432/railway
+; DATABASE_URL=postgresql://postgres:objZQMbEDZvnkAmCWxeAWiMpHfKPKEBr@postgres.railway.internal:5432/railway
+; DATABASE_USERNAME=postgres
+; DATABASE_PASSWORD=objZQMbEDZvnkAmCWxeAWiMpHfKPKEBr
 
 
-
-
-
+DATABASE_URL=jdbc:postgresql://localhost:5432/railway
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=objZQMbEDZvnkAmCWxeAWiMpHfKPKEBr
+PORT=8080
