--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.application.name=seattle-in-your-lens
 
 
 # deployed
-spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
@@ -20,4 +20,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=${PORT:8080}
+
 
