--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 ; DATABASE_PASSWORD=objZQMbEDZvnkAmCWxeAWiMpHfKPKEBr
 
 
-DATABASE_URL=jdbc:postgresql://localhost:5432/railway
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=objZQMbEDZvnkAmCWxeAWiMpHfKPKEBr
-PORT=8080
+; DATABASE_URL=jdbc:postgresql://localhost:5432/railway
+; DATABASE_USERNAME=postgres
+; DATABASE_PASSWORD=objZQMbEDZvnkAmCWxeAWiMpHfKPKEBr
+; PORT=8080
