--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,32 @@
-spring.application.name=seattle-in-your-lens
-# localhost
-
-#spring.datasource.url=jdbc:postgresql://localhost:5432/seattle_lens_db
-#spring.datasource.username=postgres
+#spring.application.name=seattle-in-your-lens
+## localhost
 #
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
-# deployed
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-server.port=${PORT:8080}
-
-
-
-#deployed 2
-#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-#spring.datasource.username=${DB_USER}
-#spring.datasource.password=${DB_PASSWORD}
+##spring.datasource.url=jdbc:postgresql://localhost:5432/seattle_lens_db
+##spring.datasource.username=postgres
+##
+##spring.datasource.driver-class-name=org.postgresql.Driver
+##spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.show-sql=true
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
+#
+## deployed
+#spring.datasource.url=${DATABASE_URL}
+#spring.datasource.username=${DATABASE_USERNAME}
+#spring.datasource.password=${DATABASE_PASSWORD}
 #
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
 #server.port=${PORT:8080}
+#
+#
+#
+#
+#
+#
 
 
-
-
+spring.application.name=seattle-in-your-lens
+spring.profiles.active=local
