--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/seattle_lens_db
 spring.datasource.username=postgres
 spring.datasource.password=YOUR_LOCAL_DB_PASSWORD
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
