Changed fetching to LAZY, added EntityGraphs for efficient data retrieval

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=seattle-in-your-lens
 spring.profiles.active=local
+
+# close the database connection as soon as your Service/Repository layer is finished
+spring.jpa.open-in-view=false
